[package]
name = "esplora-cli"
version = "0.1.1"
edition = "2021"
authors = ["Yancy <rust@yancy.lol>"]
license = "MIT"
homepage = "https://github.com/yancyribbens/esplora-cli"
repository = "https://github.com/yancyribbens/esplora-cli"
documentation = "https://docs.rs/esplora-client/"
description = "Bitcoin Esplora CLI API"
keywords = ["bitcoin", "esplora"]
readme = "README.md"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.32.2", features = ["serde", "std"], default-features = false }
bitcoin_hashes = "0.14.0"
clap = { version = "4.5.4", features = ["derive"] }
esplora-client =  { version = "0.9.0", features = ["blocking-https"] }
serde_json = "1.0.116"
hex = { package = "hex-conservative", version = "0.2.0", default-features = false, features = ["alloc"] }
